dartagnan/src/test/resources/spirv/opencl/gpuverify/sourcelocation_tests/races/fail/write_write/elem_width_16.spvasm
; @Config: 3, 1, 3
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 27
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
               OpCapability Int16
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %11 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpName %p "p"
               OpName %q "q"
               OpName %entry "entry"
               OpName %p_addr "p.addr"
               OpName %q_addr "q.addr"
               OpName %call "call"
               OpName %conv "conv"
               OpName %arrayidx "arrayidx"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
               OpDecorate %p_addr Alignment 4
               OpDecorate %q_addr Alignment 4
       %uint = OpTypeInt 32 0
     %ushort = OpTypeInt 16 0
     %uint_3 = OpConstant %uint 3
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_CrossWorkgroup_uint = OpTypePointer CrossWorkgroup %uint
%_ptr_CrossWorkgroup_ushort = OpTypePointer CrossWorkgroup %ushort
         %10 = OpTypeFunction %void %_ptr_CrossWorkgroup_uint %_ptr_CrossWorkgroup_ushort
%_ptr_Function__ptr_CrossWorkgroup_uint = OpTypePointer Function %_ptr_CrossWorkgroup_uint
%_ptr_Function__ptr_CrossWorkgroup_ushort = OpTypePointer Function %_ptr_CrossWorkgroup_ushort
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
         %11 = OpFunction %void DontInline %10
          %p = OpFunctionParameter %_ptr_CrossWorkgroup_uint
          %q = OpFunctionParameter %_ptr_CrossWorkgroup_ushort
      %entry = OpLabel
     %p_addr = OpVariable %_ptr_Function__ptr_CrossWorkgroup_uint Function
     %q_addr = OpVariable %_ptr_Function__ptr_CrossWorkgroup_ushort Function
               OpStore %p_addr %p Aligned 4
               OpStore %q_addr %q Aligned 4
         %19 = OpLoad %_ptr_CrossWorkgroup_ushort %q_addr Aligned 4
         %20 = OpBitcast %_ptr_CrossWorkgroup_uint %19
               OpStore %p_addr %20 Aligned 4
         %21 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
       %call = OpCompositeExtract %uint %21 0
       %conv = OpUConvert %ushort %call
         %24 = OpLoad %_ptr_CrossWorkgroup_ushort %q_addr Aligned 4
   %arrayidx = OpInBoundsPtrAccessChain %_ptr_CrossWorkgroup_ushort %24 %uint_3
               OpStore %arrayidx %conv Aligned 2
               OpReturn
               OpFunctionEnd
